WIP generated files to zip nearly complete

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ########################################################################
 # Python - https://github.com/github/gitignore/blob/master/Python.gitignore
 ######################################################################## Project
-mock_generators/exports
+mock_generators/export/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
