Streamlit multipage app structure added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.11"
 streamlit = "^1.15.1"
 lorem-text = "^2.1"
 faker = "^15.3.3"
+streamlit-extras = "^0.2.4"
+streamlit-toggle-switch = "^1.0.2"
 
 
 [build-system]
