--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ faker = "^15.3.3"
 streamlit-extras = "^0.2.4"
 streamlit-toggle-switch = "^1.0.2"
 hydralit-components = "^1.0.10"
+pytest = "^7.2.0"
 
 
 [build-system]
