--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ streamlit-extras = "^0.2.4"
 streamlit-toggle-switch = "^1.0.2"
 hydralit-components = "^1.0.10"
 pytest = "^7.2.0"
+dataclasses-json = "^0.5.7"
 
 
 [build-system]
