--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,14 @@ pytest = "^7.2.0"
 dataclasses-json = "^0.5.7"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "mock_generators"
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
