--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,16 @@ streamlit-toggle-switch = "^1.0.2"
 hydralit-components = "^1.0.10"
 pytest = "^7.2.0"
 dataclasses-json = "^0.5.7"
+pyperclip = "^1.8.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "mock_generators"
+]
 
 [build-system]
 requires = ["poetry-core"]
