--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ hydralit-components = "^1.0.10"
 pytest = "^7.2.0"
 dataclasses-json = "^0.5.7"
 pyperclip = "^1.8.2"
+streamlit-agraph = "^0.0.45"
+python-dotenv = "^1.0.0"
+openai = "^0.26.5"
 
 
 [tool.poetry.group.dev.dependencies]
