--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ faker = "*"
 streamlit-player = "*"
 
 [dev-packages]
+mock-generators = {editable = true, path = "."}
 
 [requires]
 python_version = "3.11"
