--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ faker = "*"
 streamlit-player = "*"
 requests = "*"
 pandas = "*"
+random-address = "*"
 
 [dev-packages]
 mock-generators = {editable = true, path = "."}
