--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ streamlit-player = "*"
 requests = "*"
 pandas = "*"
 random-address = "*"
+openai = "*"
+numpy = "*"
 
 [dev-packages]
 mock-generators = {editable = true, path = "."}
