--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ packages = [{include = "graph_data_generator_streamlit"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-streamlit = "^1.24.1"
-graph-data-generator = "^0.2.0"
+streamlit = ">=1.27,<2.0"
+graph-data-generator = ">=0.3,<1.0"
+neo4j-uploader = {path = "/Users/jasonkoo/neo4j/repos/neo4j-uploader", develop = true}
+pyclip = ">=0.7,<1.0"
 
 
 [tool.poetry.group.dev.dependencies]
