--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mock-graph-data-generator-streamlit"
-version = "0.6.0"
+version = "0.7.0"
 description = ""
 authors = ["Jason Koo <jalakoo@gmail.com>"]
 readme = "README.md"
@@ -8,8 +8,10 @@ packages = [{include = "graph_data_generator_streamlit"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-streamlit = "^1.24.1"
-graph-data-generator = "^0.2.0"
+streamlit = ">=1.27,<2.0"
+neo4j-uploader = ">=0.2.0,<0.3.0"
+pyclip = ">=0.7,<1.0"
+graph-data-generator = ">=0.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
