--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,12 @@ packages = [{include = "graph_data_generator_streamlit"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 streamlit = ">=1.27,<2.0"
-neo4j-uploader = ">=0.2.0,<0.3.0"
+neo4j-uploader = ">=0.4"
 pyclip = ">=0.7,<1.0"
-graph-data-generator = ">=0.3.2"
+graph-data-generator = ">=0.3.2,<0.4.0"
+neo4j = "^5.14.1"
+streamlit-agraph = "^0.0.45"
+openai = "^0.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
