--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mock-graph-data-generator-streamlit"
-version = "0.7.3"
+version = "0.7.5"
 description = ""
 authors = ["Jason Koo <jalakoo@gmail.com>"]
 readme = "README.md"
@@ -9,12 +9,14 @@ packages = [{include = "graph_data_generator_streamlit"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 streamlit = ">=1.27,<2.0"
-neo4j-uploader = {path = "/Users/jasonkoo/neo4j/repos/neo4j-uploader", develop = true}
 pyclip = ">=0.7,<1.0"
-graph-data-generator = ">=0.3.2"
 neo4j = "^5.14.1"
 streamlit-agraph = "^0.0.45"
 openai = "^0.28.1"
+opencv-python = "^4.8.1.78"
+pillow = "^10.1.0"
+graph-data-generator = "0.4.0"
+neo4j-uploader = "^0.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
