--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,11 @@ streamlit = ">=1.27,<2.0"
 pyclip = ">=0.7,<1.0"
 neo4j = "^5.14.1"
 streamlit-agraph = "^0.0.45"
-openai = "^0.28.1"
+openai = "^1.6.1"
 opencv-python = "^4.8.1.78"
 pillow = "^10.1.0"
-graph-data-generator = "0.4.0"
 neo4j-uploader = "^0.4.1"
+graph-data-generator = "^0.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
