Upload progress indicator added with new neo4j_uploader update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ streamlit-agraph = "^0.0.45"
 openai = "^1.6.1"
 opencv-python = "^4.8.1.78"
 pillow = "^10.1.0"
-neo4j-uploader = {path = "/Users/jasonkoo/neo4j/repos/neo4j-uploader", develop = true}
+neo4j-uploader = {git = "https://github.com/jalakoo/neo4j-uploader.git", rev = "main"}
 graph-data-generator = "^0.4.1"
 
 
